// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineMessage should render with higligthed background 1`] = `
<Coral.InlineMessage.Success
  description="Validation and successful messages"
  link={null}
  title="Validation title."
  withBackground={true}
/>
`;

exports[`InlineMessage should render with icon and description 1`] = `
<Coral.InlineMessage.Success
  description="Validation and successful messages"
  link={null}
  title=""
/>
`;

exports[`InlineMessage should render with icon, title and description 1`] = `
<Coral.InlineMessage.Success
  description="Validation and successful messages"
  link={null}
  title="Validation title."
/>
`;

exports[`InlineMessage should render with icon, title, description and link 1`] = `
<Coral.InlineMessage.Success
  description="Validation and successful messages"
  link={
    <Link
      href="https://my.custom.link"
    >
      See more
    </Link>
  }
  title="Validation title."
/>
`;

exports[`InlineMessage should render with title and description 1`] = `
<Coral.InlineMessage.Success
  description="Validation and successful messages"
  link={null}
  title="Validation title."
/>
`;
